[gd_scene load_steps=5 format=3 uid="uid://bvde6jiut4pih"]

[ext_resource type="Script" path="res://Scripts/Level/SaveArea.gd" id="1_jchwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xapsy"]
size = Vector2(50, 21)

[sub_resource type="LabelSettings" id="LabelSettings_xw6p3"]
line_spacing = 1.0
font_size = 14
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8j3lj"]
line_spacing = 1.0
font_size = 14
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="InteractableArea" type="Area2D"]
script = ExtResource("1_jchwf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xapsy")

[node name="LabelSaveGame" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -48.0
offset_top = -40.0
offset_right = 52.0
offset_bottom = -16.0
text = "Press E to save"
label_settings = SubResource("LabelSettings_xw6p3")

[node name="GameIsSavedLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -40.0
offset_top = -40.0
offset_right = 43.0
offset_bottom = -14.0
text = "Game saved"
label_settings = SubResource("LabelSettings_8j3lj")
